--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -1,12 +1,16 @@
 .sideBar {
     /* flex width of 20% */
-    flex: 0.12;
-    /* border: 1px solid black; */
+    width: 15%;
+    height: 100vh;
+    /* border-right: 1px solid grey; */
+    position: fixed;
+    /* background-color: #3b3b3b; */
+    /* color: white; */
 }
 
 .sideBar > hr {
     height: 1px;
     border: 0;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     margin: 8px 0;
 }
