--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -8,9 +8,15 @@
 }
 
 .categoryLinks div {
-  /* background-color: grey; */
-  border: 2px solid rgb(165, 165, 165);
-  border-radius: 15px;
-  padding: 10px;
+  background-color: rgb(211, 211, 211);
+  /* border: 2px solid rgb(165, 165, 165); */
+  border-radius: 20px;
+  padding: 5px 10px;
   color: black;
+}
+
+@media only screen and (max-width: 900px) {
+  .categoryLinks {
+    display: none;
+  }
 }
