--- a/src/components/RecommendedVideos/RecommendedVideos.css
+++ b/src/components/RecommendedVideos/RecommendedVideos.css
@@ -1,18 +1,20 @@
 .recommendedVideos {
-    /* sidebar takes up 0.2 */
-    flex: 0.8;
-    padding: 40px 20px;
-    /* display: flex; */
-    padding-bottom: 0;
-    margin-left: 15%;
+  /* sidebar takes up 0.2 */
+  /* flex: 0.8; */
+  padding: 40px 20px;
+  display: flex;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 0;
+  margin-left: 15%;
 }
 
 .recommendedVideos > h2 {
-    margin: 0 5px 20px 0;
+  margin: 0 5px 20px 0;
 }
 
 .recommendedVideos_video {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
-
