--- a/src/components/CategoryRow/CategoryRow.css
+++ b/src/components/CategoryRow/CategoryRow.css
@@ -1,17 +1,15 @@
 .categoryLinks {
   position: absolute;
-  left: 17%;
+  left: 18%;
   display: flex;
-  justify-content: space-between;
-  width: 80%;
+  gap: 15px;  
   align-items: center;
 }
 
-.categoryLinks div {
+.catergory {
   background-color: rgb(211, 211, 211);
-  /* border: 2px solid rgb(165, 165, 165); */
-  border-radius: 20px;
-  padding: 5px 10px;
+  border-radius: 25px;
+  padding: 5px 15px;
   color: black;
 }
 
