--- a/src/components/ChannelRow/ChannelRow.css
+++ b/src/components/ChannelRow/ChannelRow.css
@@ -3,9 +3,8 @@
     flex-wrap: wrap;
     width: 70%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin: 20px auto;
-    /* color: #fefefe; */
 }
 
 .channelRow_text {
@@ -31,7 +30,7 @@
 .channelRow_logo {
     width: 120px !important;
     height: 120px !important;
-    margin: 10px 60px;
+    margin: 15px 150px;
 }
 
 .channelRow hr {
@@ -39,4 +38,18 @@
     height: 1;
     width: 100%;
     background-color: black;
+}
+
+.subscribeBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    width: 150px;
+    margin-left: 30%;
+    background-color: rgb(241, 239, 239);
+    color: #1f1f1f;
+    letter-spacing: 0.5px;
+    font-weight: 600;
+    border: none;
 }
