--- a/src/components/SearchPage/SearchPage.css
+++ b/src/components/SearchPage/SearchPage.css
@@ -1,10 +1,10 @@
 .searchPage {
-    flex: 0.8;
+    /* flex: 0.8 */
     justify-content: center;
     align-items: center;
     /* background-color: #272727; */
     padding: 20px 20px;
-    margin-left: 15%;
+    width: 100%;
 }
 
 .searchPage > hr {
