--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,22 +1,25 @@
 .sideBar {
     /* flex width of 15% */
     width: 15%;
-    height: 100vh;
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
-    /* border-right: 1px solid grey; */
-    position: fixed;
+    overflow: auto;
 }
 
 .sideBar > hr {
     height: 1px;
+    width: 90%;
     border: 0;
-    background-color: lightgrey;
-    margin: 8px 0;
+    border: 1px solid lightgray;    
+    margin: 10px 0;
 }
 
-.subscriptionHeader {
+.contentHeader {
     padding: 10px 20px;
+    color: rgb(73, 73, 73);
+    font-weight: 500;
+    font-size: 14px;
 }
 
 @media only screen and (max-width: 1250px) {
